css/homepage.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  body {
    font-family: "Poppins",sans-serif;
    background: white;
    color: #4481eb;
    margin-bottom: 100px;
  }
  #blue_bar{
    background-color: #4d84e2;
    /* background-image:#4d84e2 ; */
    height: 50px;
    width: 100%;
}
#bb-content{
    width: 800px;
    margin: auto;
    font-size: 30px;
    color: black;
    /* padding-top: 3px; */

}
#bb-content a{
  text-decoration: none;
}
#bb-content img{
  width: 49px;
  height: 49px;
  position: absolute;
  right: 5px;
  border-radius: 50%;
 
  
}
  .live {
    border: 2px solid black;
    position: -webkit-sticky;
    position: sticky; 
    position: fixed;
    top: 0px;
    /* z-index: 1; */
    height: 105px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    overflow-x: scroll;
    padding: 10px 0 10px 20px;
    margin-bottom: 20px;
    margin-top: 60px;
    background-color: white;
    z-index: -1;
    overflow: none;    
  }
  
  .live .person {
    position: relative;
    margin-right: 30px;
    text-align: center;
  }
  
  .live .profile-pic {
    position: relative;
    background-position: 50%;
    background-size: cover;
    height: 40px;
    width: 40px;
    border-radius: 50%;
  }
  
   .live .person:nth-child(1) .profile-pic {background-image: url('../images/Profile-images/ateethprofilepic.jpg');}
  .live .person:nth-child(2) .profile-pic {background-image: url('../images/Profile-images/manan.jpg');}
  .live .person:nth-child(3) .profile-pic {background-image: url('../images/Profile-images/namanprofilepic.jpeg');}
  .live .person:nth-child(4) .profile-pic {background-image: url('../images/Profile-images/selfie.jpg');}
  .live .person:nth-child(5) .profile-pic {background-image: url('../images/Profile-images/user8.jfif');}
  .live .person:nth-child(6) .profile-pic {background-image: url('../images/Profile-images/user5.jfif');}
  .live .person:nth-child(7) .profile-pic {background-image: url('../images/Profile-images/user6.jpg');}
  .live .person:nth-child(8) .profile-pic {background-image: url('../images/Profile-images/user7.jpg');}
  
  .live .profile-pic::before {
    content: '';
    display: inline-block;
    border: 3px solid #454D5A;
    padding: 24px;
    border-radius: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
  
  .live .person .name {
    font-size: 12px;
    padding-top: 20px;
  }
  
  .live-active .profile-pic:before {
    border-color: #FFDF3B !important;
  }
 
  
  
  .live-active span {
    background: #FFDF3B;
    color: #000;
    width: 50px;
    display: inline-block;
    font-size: 10px;
    border-radius: 50px;
    padding: 2px 0;
    font-weight: 600;
  
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
  
  .live-active i {
    padding-right: 3px;
  }
  .nav {
    background-color: #4d84e2;
    /* background: #242C39; */
    height: 50px;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: fixed;
    bottom: 0;
    box-shadow: 0 -4px 25px 0 rgba(0, 0, 0, .12);
    /* padding-bottom: 60px; */
  }
  .like{
    padding-left: 50px;
  }
  .comment{
    padding-left: 105px;

  }
  .share{
    padding-left: 20px;

  }
  
  .nav .icon {
    flex: 1;
    text-align: center;
    color: #d9d9d9;
  }
  .nav .icon :hover{
    color: white;
  }
  
  .nav .icon i {
    /* padding-bottom: 3px; */
    font-size: 20px;
  }
  
  .nav .icon p {
    font-size: 12px;
  }
  .active {
    color: #FFDF3B !important;
  }
  .newsfeed {
    padding: 0 20px;
    z-index: -2;
    position: relative;
  }
  .card {
    width: 60%;
    height: 60%;
    background: yellow;
    box-shadow: 0 0 12px 2px rgba(0, 0, 0, .5);
    margin-bottom: 20px;
    margin-left: 180px;
    border-radius: 10px;
    font-size: 14px;
    border: solid 2px black;
    
    /* margin-top: 10px; */
  }
  
  .card .picture-1 {
    background-image: url('../images/Post-images/post1.jfif');
    background-position: 50%;
    background-size: cover;
    min-height: 400px;
    /* height: 500px; */
    /* height: 100%; */
    width: 100%;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    margin-top: 160px;
  }
  .card .picture-2 {
    background-image: url('../images/Post-images/post2.jpg');
    background-position: 50%;
    background-size: cover;
    min-height: 400px;
    /* height: 500px; */
    /* height: 100%; */
    width: 100%;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }
  .card .picture-3 {
    background-image: url('../images/Post-images/post-3.jpg');
    background-position: 50%;
    background-size: cover;
    min-height: 400px;
    /* height: 500px; */
    /* height: 100%; */
    width: 100%;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }
  
  .card .content {
    display: flex;
    flex-direction: column;
    padding: 15px 10px;
  }
  
  .card .header {
    display: flex;
    align-items: center;
  }
  
  .card .profile-pic-1 {
    background-image: url('../images/Profile-images/user8.jfif');
    background-position: 50%;
    background-size: cover;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    /* margin-bottom: 10px; */
  }
  .card .profile-pic-2 {
    background-image: url('../images/Profile-images/user2.jpg');
    background-position: 50%;
    background-size: cover;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    /* margin-bottom: 10px; */
  }
  
  .card .profile-pic-3 {
    background-image: url('../images/Profile-images/selfie.jpg');
    background-position: 50%;
    background-size: cover;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    /* margin-bottom: 10px; */
  }
  
  .card .detail {
    margin-left: 10px;
    /* background-color: tomato; */
    /* margin-top: 10px; */
  }
  
  .card .posted {
    font-size: 10px;
    padding-top: 3px;
  }
  
  .card .desc {
    padding-top: 10px;
    line-height: 1.5;
  }
  
  .card .tags {
    font-size: 12px;
    color: orange;
    /* padding-top: 30px; */
  }
  
  .card .footer {
    display: flex;
    justify-content: space-between;
    padding-top: 20px;
  }
  
  .card .footer .like {
    flex: 0 0 25%;
  }
  
  .card .footer .comment {
    flex: 1;
  }
  
  .card .footer .share {
    flex: 0 0 18%;
  }
  
  .card .footer i {
    padding-right: 3px;
  }

